--- a/react-routing-app/src/index.css
+++ b/react-routing-app/src/index.css
@@ -1,5 +1,14 @@
 body {
+  background-color:#e0fff4;
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: "Segoe UI";
+  font-weight: lighter;
+  font-size: 30px;
+}
+
+h1{
+    font-family: "Segoe UI";
+    font-weight: 300;
+
 }
