--- a/react-routing-app/src/App.css
+++ b/react-routing-app/src/App.css
@@ -12,7 +12,7 @@ ul{
   padding-top: 5px;
   display: block;
   padding: 14px 16px;
-  color: steelblue;
+  color: black;
   text-align: center;
   text-decoration: none;
   font-family: "Segoe UI";
@@ -20,7 +20,7 @@ ul{
   font-size: large;
 }
 
- li a:hover{background-color: greenyellow;}
+ li a:hover{background-color: snow;}
 
 .active{background-color: greenyellow;}
 
